--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <name>SpringABC Maven Webapp</name>
     <!-- FIXME change it to the project's website -->
-    <url>http://www.abc.com</url>
+    <!--<url>http://www.abc.com</url>-->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -128,6 +128,11 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>mchange-commons-java</artifactId>
+            <version>0.2.12</version>
+        </dependency>
 
         <!--MyBatis-->
         <dependency>
@@ -140,7 +145,7 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
-            <version>1.3.1</version>
+            <version>1.3.0</version>
         </dependency>
 
         <!--第四部分 日志-->
