修复数据库无法连接的问题：升级mysql-connector-java版本为8.0.11；jdbc.url添加serverTimezone=UTC&useSSL=false

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,7 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.1.9:3306/xinghe?useUnicode=true&characterEncoding=utf8
+jdbc.driver=com.mysql.cj.jdbc.Driver
+#jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/springabc?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
+#在mysql为8.0以上时，需要加serverTimezone=UTC&useSSL=false
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/springabc?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
 jdbc.username=root
 jdbc.password=root
